--- a/Chronicles_of_Arithon.vcxproj.filters
+++ b/Chronicles_of_Arithon.vcxproj.filters
@@ -31,4 +31,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
