--- a/Chronicles_of_Arithon.vcxproj.filters
+++ b/Chronicles_of_Arithon.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="FileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Authenticator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
