1. gameEngine renamed to MenuController
2. When .exe executed (Non CLA version):
 ○ Extra error messages removed
 ○ Extra message display removed
 ○ User confirmation for exit added

3.When Using CLA :
 ○ Login uses -euser -nuser -pswd -cpswd
 ○ new user creation checks for match between two password
 ○ -debug is hidden for coders only
 ○ -help is updated to -info
 ○ uses ShowHelp
 ○ ShowHelp updated

--- a/Chronicles_of_Arithon.vcxproj.filters
+++ b/Chronicles_of_Arithon.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="battle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GameEngine.cpp">
+    <ClCompile Include="MenuController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,7 +56,7 @@
     <ClInclude Include="EventGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GameEngine.h">
+    <ClInclude Include="MenuController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
