--- a/Chronicles_of_Arithon.vcxproj
+++ b/Chronicles_of_Arithon.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Chronicles_of_Arithon.cpp" />
     <ClCompile Include="EventGenerator.cpp" />
     <ClCompile Include="FileManager.cpp" />
-    <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="MenuController.cpp" />
     <ClCompile Include="PlayerState.cpp" />
     <ClCompile Include="StoryEngine.cpp" />
   </ItemGroup>
@@ -145,7 +145,7 @@
     <ClInclude Include="Authenticator.h" />
     <ClInclude Include="EventGenerator.h" />
     <ClInclude Include="FileManager.h" />
-    <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="MenuController.h" />
     <ClInclude Include="PlayerState.h" />
     <ClInclude Include="StoryEngine.h" />
   </ItemGroup>
